kubernetes/apps/kube-system/cilium/app/networks.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/service.json
apiVersion: v1
kind: Service
metadata:
  name: kube-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: k8s.cloudjur.com
    lbipam.cilium.io/ips: 10.10.30.30
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - port: 6443
