kubernetes/apps/kube-system/cilium/app/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal-local.cloudjur.com
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.10.30.25
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.cloudjur.com"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.cloudjur.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: cloud-jur-production-tls
# ---
# # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: external
#   annotations:
#     external-dns.alpha.kubernetes.io/target: &hostname external-local.cloudjur.com
# spec:
#   gatewayClassName: cilium
#   addresses:
#     - type: IPAddress
#       value: 10.10.30.26
#   infrastructure:
#     annotations:
#       external-dns.alpha.kubernetes.io/hostname: *hostname
#   listeners:
#     - name: http
#       protocol: HTTP
#       port: 80
#       hostname: "*.cloudjur.com"
#       allowedRoutes:
#         namespaces:
#           from: Same
#     - name: https
#       protocol: HTTPS
#       port: 443
#       hostname: "*.cloudjur.com"
#       allowedRoutes:
#         namespaces:
#           from: All
#       tls:
#         certificateRefs:
#           - kind: Secret
#             name: cloudjur-com-production-tls
