kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Platform Infrastructure
    gethomepage.dev/name: Hubble
    gethomepage.dev/description: Cilium's observability platform
    gethomepage.dev/icon: https://raw.githubusercontent.com/chaijunkin/dashboard-icons/main/png/cilium.png
spec:
  hostnames:
    - hubble.cloudjur.com
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
